[etc] output installed extensions.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
       with:
         command: install -d # Install all dependencies, including development ones
     
-    - name: Test
+    - name: List installed extensions
       uses: VaultVulp/action-pipenv@v2.0.1
       with:
-        command: run test # Run custom `test` command defined in the `[scripts]` block of Pipfile
+        command: list 
