--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,7 +24,7 @@
 
 	// Configure tool-specific properties.
 	// "customizations": {},
-
+	"containerUser": "worker",
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	"remoteUser": "worker"
 }
