--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,36 +17,20 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-
-  install-test:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2 # Checking out the repo
 
-    - name: Install dependecies
-      uses: VaultVulp/action-pipenv@v2.0.1
+    - name: Sphinx Build
+      # You may pin to the exact commit or the version.
+      # uses: ammaraskar/sphinx-action@8b4f60114d7fd1faeba1a712269168508d4750d2
+      uses: ammaraskar/sphinx-action@0.4
       with:
-        command: install -d # Install all dependencies, including development ones
-    
-    - name: List installed extensions
-      uses: VaultVulp/action-pipenv@v2.0.1
-      with:
-        command: run pip list
+        # The folder containing your sphinx docs.
+        docs-folder: source
+        # The command used to build your documentation.
+        build-command: make html
+        # Run before the build command, you can use this to install system level dependencies, for example with "apt-get update -y && apt-get install -y perl"
+        pre-build-command: pip install -r requirements.txt
+        
