--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3"
 services:
   sphinx:
     build:
-       context: .
-       dockerfile: sphinx/Dockerfile
+       context: sphinx
+       #dockerfile: sphinx/Dockerfile
     env_file: .env
     volumes:
        - .:/workspace:cached
